tests/negative/generics/too_many_generic_args.orng
// too_many_generic_args.orng:9:15: error: expected a type argument, got a value
//     first[3, 4, Int](x)
//              ^
// 
fn first[const n: Int, T](arr: [n]T) -> T { arr[0] }

fn main() -> Int {
    let x: [3]Int = [5, 10, 15]
    first[3, 4, Int](x)
}